version 2.3
- added argument n, number of categories
- added mirror.x and .y
- fixed treegraph bug (changed vertex.layout argument)
- dplyr objects work with treemap
- fixed bug in comparison treemap with specified range
- fixed treecolors and itreemap warning messages

version 2.2
- added treecolors, a function to experiment with Tree Colors
- improved treegraph: added layout options
- added random.hierarchical.data

version 2.1-1
- minor fix: for compatibility with R<3.0.0, rep_len is replaced by rep(..., length.out=)

version 2.1
- itreemap added, a web-interface (made with shiny) added
- treepalettes added, to make hierarchical color palettes directly available
- treegraph added, to draw a radial tree with colors from treepalettes
- hierarchical color palettes method slightly improved (brighter)
- border line thickness (border.lwds) added as parameter to adjust line thickness at variaous agggregation levels
- improved text color decision (black or white) given the background color
- fontfamily parameters added (thanks to Peter Ellis)
- border.col parameter added (thanks to Peter Ellis)
- type "value" has evolved into two options: "value", which is now focused on diverging color palettes, and "manual" in which a palette is directly mapped to the provided range. 
- bug in type "comp" fixed
- bug in quantitative scales fixed
- enhanced treemap output: added columns colorvalue and color, aspect ratio, and range
- improved business test data set (removed redundant colums)
- add version number of required data.table package to prevent conflicts

version 2.0-1
- computation time examples shorter (CRAN policy)

version 2.0
- main function migrated to treemap